--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>e-go league</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-  </head>
-  <body>
-    <div class="columns">
-      <div class="column">
-        <section class="hero is-danger is-fullheight">
-          <div class="hero-body">
+    <link rel="stylesheet" href="/styles/index.css">
+</head>
+<body class="has-navbar-fixed-top">
+    {{ partial "navbar.html" . }}
+    <section class="hero">
+        <div class="hero-body">
             <div class="">
-              <p class="title">
-                {{ .Params.titolo }}
-              </p>
-              <p class="subtitle">
-                {{ .Params.sottotitolo }}
-              </p>
+                <p class="title black">
+                    {{ .Params.titolo }}
+                </p>
+                <p class="subtitle black">
+                    {{ .Params.sottotitolo }}
+                </p>
             </div>
-          </div>
-        </section>
-      </div>
-      <div class="column">
-        <img src="{{ .Params.logo }}"/>
-      </div>
-      
-    </div>
-    <div class="tile is-ancestor">
-      {{ range (where $.Site.RegularPages "Section" "blog") }}
-        <a class="tile is-child box" href="{{ .RelPermalink }}">
-          <p class="title">{{ .Params.titolo }}</p>
-          <p>{{ .Params.descrizione }}</p>
-        </a>
-      {{ end }}
-    </div>
-  </body>
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+        </div>
+    </section>
+
+    <div class="separator01"></div>
+    
+    
+    {{ range $key, $sezione := .Params.sezioni }}
+    {{ if ne $key 0 }}<div class="separator01"></div>{{ end }}
+    <section class="section white-block"> 
+        <div class="box">
+            <p class="title">{{ $sezione.titolo }}</p>
+            <p>{{ $sezione.descrizione }}</p>
+        </div>
+    </section>
+    {{ end }}
+    
+</body>
+<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </html>
